// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="css-8atqhb e15athp30"
  >
    <div
      style="position: relative; padding-top: 56.07142857142857%; min-height: 45px;"
    >
      <iframe
        allowfullscreen=""
        sandbox=""
        src="https://www.example.com"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        title="Title"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-8atqhb e15athp30"
  >
    <div
      style="position: relative; padding-top: 56.07142857142857%; min-height: 45px;"
    >
      <iframe
        allowfullscreen=""
        sandbox=""
        src="https://www.example.com"
        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
        title="Title"
      />
    </div>
  </div>
</DocumentFragment>
`;
